--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,9 @@ main:
         
   - title: "Blog"
     url: /year-archive/
-    
+
+  - title: "Miscellaneous"
+    url: /misc/
 
     
   # - title: "CV"
