--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "About"
     url: /../
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
     
   #- title: "Publications"
   # url: /publications/
