--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Jin Jiang"
 title_separator          : "-"
 name                     : &name "Jin Jiang"
-description              : &description "personal description"
+description              : &description "Back to the matters themselves"
 url                      : https://hollowolloh.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hollowolloh"
