--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Jin Jiang"
   pronouns         : # example: "she/her"  
-  bio              : "Back to the matters themselves"
+  bio              : "Back to the matters themselves. -Edmund Husserl"
   location         : "Shandong, China"
   employer         : #"Red Brick University"
   uri              : # URL
