--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "hollowolloh"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "photo.JPG"
   name             : "Jin Jiang"
   pronouns         : # example: "she/her"  
   bio              : "Questioning is the piety of thinking. -Martin Heidegger"
